--- a/app/assets/stylesheets/landing.css
+++ b/app/assets/stylesheets/landing.css
@@ -547,10 +547,16 @@ section {
   position: relative;
 }
 
-.avatar-item img {
+.avatar-item img,
+.avatar-item.avatar-svg svg {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.avatar-item.avatar-svg svg {
+  display: block;
+  color: var(--color-text-muted);
 }
 
 .avatar-item:first-child {
